try to fix linking

--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -5,6 +5,7 @@ function(add_unittest_executable name sources)
             gridtools_verification
             ${GTEST_BOTH_LIBRARIES}
         )
+    target_compile_definitions( ${name} "-DBOOST_SYSTEM_NO_DEPRECATED" )
 endfunction(add_unittest_executable)
 
 file(GLOB_RECURSE GT_VERIFICATION_TESTS "test_*.cpp")
