--- a/cmake/gridtools_verification-config.cmake.in
+++ b/cmake/gridtools_verification-config.cmake.in
@@ -19,11 +19,11 @@ set_and_check(GRIDTOOLS_ROOT "@GRIDTOOLS_ROOT@")
 set_and_check(GRIDTOOLS_VERIFICATION_INCLUDE_DIR "@PACKAGE_GRIDTOOLS_VERIFICATION_INCLUDE_DIR@")
 set_and_check(GRIDTOOLS_VERIFICATION_LIBRARY_DIR "@PACKAGE_GRIDTOOLS_VERIFICATION_LIBRARY_DIR@")
 
-
-set(GRIDTOOLS_VERIFICATION_BOOST_LIBRARYDIR "@SERIALBOX_BOOST_LIBRARY_DIRS@")
-set(GRIDTOOLS_VERIFICATION_BOOST_INCLUDEDIR "@SERIALBOX_BOOST_INCLUDE_DIRS@")
-set(GRIDTOOLS_VERIFICATION_BOOST_VERSION "@SERIALBOX_BOOST_VERSION@")
-set(GRIDTOOLS_VERIFICATION_REQUIRED_BOOST_COMPONENTS "@SERIALBOX_REQUIRED_BOOST_COMPONENTS@")
+set(GRIDTOOLS_VERIFICATION_BOOST_LIB_VERSION "@Boost_LIB_VERSION@")
+STRING(REGEX REPLACE "_" "." GRIDTOOLS_VERIFICATION_BOOST_VERSION ${GRIDTOOLS_VERIFICATION_BOOST_LIB_VERSION})
+set(GRIDTOOLS_VERIFICATION_BOOST_LIBRARYDIR "@Boost_LIBRARY_DIRS@")
+set(GRIDTOOLS_VERIFICATION_BOOST_INCLUDEDIR "@Boost_INCLUDE_DIRS@")
+set(GRIDTOOLS_VERIFICATION_REQUIRED_BOOST_COMPONENTS "@REQUIRED_BOOST_COMPONENTS@")
 
 list(APPEND GRIDTOOLS_VERIFICATION_INCLUDE_DIRS "${GRIDTOOLS_ROOT}/include")
 list(APPEND GRIDTOOLS_VERIFICATION_INCLUDE_DIRS ${SERIALBOX_INCLUDE_DIRS})
