--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -1,11 +1,10 @@
 function(add_unittest_executable name sources)
     add_executable(${name} ${sources} ${GT_VERIFICATION_HEADERS})
-    
     target_link_libraries(${name} 
             gridtools_verification
             ${GTEST_BOTH_LIBRARIES}
+            ${SERIALBOX_CXX_LIBRARIES}
         )
-    target_compile_definitions( ${name} PRIVATE "-DBOOST_SYSTEM_NO_DEPRECATED" )
 endfunction(add_unittest_executable)
 
 file(GLOB_RECURSE GT_VERIFICATION_TESTS "test_*.cpp")
