--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -1,9 +1,9 @@
 function(add_unittest_executable name sources)
     add_executable(${name} ${sources} ${GT_VERIFICATION_HEADERS})
-    
     target_link_libraries(${name} 
             gridtools_verification
             ${GTEST_BOTH_LIBRARIES}
+            ${SERIALBOX_CXX_LIBRARIES}
         )
 endfunction(add_unittest_executable)
 
