--- a/cmake/gridtools_verification-config.cmake.in
+++ b/cmake/gridtools_verification-config.cmake.in
@@ -6,32 +6,14 @@ endif()
 
 include(FindPackageHandleStandardArgs)
 
-set_and_check(SERIALBOX_ROOT "@SERIALBOX_ROOT@")
-set_and_check(SERIALBOX_CMAKE "${SERIALBOX_ROOT}/cmake")
-set(SERIALBOX_VERSION_REQUIRED "@SERIALBOX_VERSION_REQUIRED@")
+include(CMakeFindDependencyMacro)
+find_dependency(Serialbox "${SERIALBOX_VERSION_REQUIRED}" HINTS ${SERIALBOX_CMAKE})
+find_dependency(GTest HINTS ${GRIDTOOLS_VERIFICATION_ROOT}/lib64/cmake) #TODO fix this hard-coding
 
-set(SERIALBOX_ROOT "@SERIALBOX_ROOT@")
-find_package( Serialbox "${SERIALBOX_VERSION_REQUIRED}" REQUIRED HINTS
-    "${SERIALBOX_ROOT}/cmake")
+set(Boost_NO_SYSTEM_PATHS ON)
+set(BOOST_INCLUDEDIR @Boost_INCLUDE_DIR@) # hint where to find boost
+find_dependency(Boost "@Boost_MAJOR_VERSION@.@Boost_MINOR_VERSION@.@Boost_SUBMINOR_VERSION@"
+    COMPONENTS @REQUIRED_BOOST_COMPONENTS@)
 
-
-set_and_check(GRIDTOOLS_ROOT "@GRIDTOOLS_ROOT@")
-set_and_check(GRIDTOOLS_VERIFICATION_INCLUDE_DIR "@PACKAGE_GRIDTOOLS_VERIFICATION_INCLUDE_DIR@")
-set_and_check(GRIDTOOLS_VERIFICATION_LIBRARY_DIR "@PACKAGE_GRIDTOOLS_VERIFICATION_LIBRARY_DIR@")
-
-set(GRIDTOOLS_VERIFICATION_BOOST_LIB_VERSION "@Boost_LIB_VERSION@")
-STRING(REGEX REPLACE "_" "." GRIDTOOLS_VERIFICATION_BOOST_VERSION ${GRIDTOOLS_VERIFICATION_BOOST_LIB_VERSION})
-set(GRIDTOOLS_VERIFICATION_BOOST_LIBRARYDIR "@Boost_LIBRARY_DIRS@")
-set(GRIDTOOLS_VERIFICATION_BOOST_INCLUDEDIR "@Boost_INCLUDE_DIRS@")
-set(GRIDTOOLS_VERIFICATION_REQUIRED_BOOST_COMPONENTS "@REQUIRED_BOOST_COMPONENTS@")
-
-list(APPEND GRIDTOOLS_VERIFICATION_INCLUDE_DIRS "${GRIDTOOLS_ROOT}/include")
-list(APPEND GRIDTOOLS_VERIFICATION_INCLUDE_DIRS ${SERIALBOX_INCLUDE_DIRS})
-list(APPEND GRIDTOOLS_VERIFICATION_INCLUDE_DIRS ${GRIDTOOLS_VERIFICATION_INCLUDE_DIR})
-
-list(APPEND GRIDTOOLS_VERIFICATION_LIBRARIES "gridtools_verification" )
-list(APPEND GRIDTOOLS_VERIFICATION_LIBRARIES @SERIALBOX_CXX_LIBRARIES@ )
-list(APPEND GRIDTOOLS_VERIFICATION_LIBRARIES @GTEST_BOTH_LIBRARIES@ )
-
-include_directories( ${GRIDTOOLS_VERIFICATION_INCLUDE_DIRS} )
-link_directories( ${GRIDTOOLS_VERIFICATION_LIBRARY_DIR} )
+# Import library targets 
+include("${CMAKE_CURRENT_LIST_DIR}/gridtools_verificationTargets.cmake")
