--- a/cmake/gridtools_verification-config.cmake.in
+++ b/cmake/gridtools_verification-config.cmake.in
@@ -20,9 +20,9 @@ find_package(Boost "@Boost_MAJOR_VERSION@.@Boost_MINOR_VERSION@.@Boost_SUBMINOR_
 
 find_dependency(Serialbox "${SERIALBOX_VERSION_REQUIRED}" HINTS @PACKAGE_Serialbox_DIR@)
 
-find_dependency(GTest HINTS ${GRIDTOOLS_VERIFICATION_ROOT}/lib64/cmake) #TODO fix this hard-coding
+find_dependency(GTest HINTS @PACKAGE_GTest_DIR@)
 
-include(${CMAKE_CURRENT_LIST_DIR}/FindThreadsCudaFix.cmake)
+include(@PACKAGE_gridtools_verification_CMAKE_DIR@/FindThreadsCudaFix.cmake)
 find_threads_cuda_fix()
 
 # Import library targets 
